---
title: Quarapp MVP-1 DAL Models
---
classDiagram
class Riwayah {
    <<enumeration>>
    Hafs
    Qaloon
}
class AyahPart {
    Uuid: id
    Uuid: ayahId
    Int: partNumber = 0
}
class Ayah {
    Uuid: id
    Riwayah: riwayah
    Int: surahNumber
    Int: ayahInSurahNumber
}
class User {
    String: id
    String: alias
    String: name
    String: surname
}
class Recording {
    Uuid: id
    String: userId
    Uuid: startId
    Uuid: endId
    String: audioUrl
    Date: createdAt
}
class SharedRecording {
    Uuid: recipientId
    Uuid: recordingId
    Date: createdAt
}
User -- Recording: creates
User --> SharedRecording
SharedRecording <-- Recording
AyahPart -- Recording: is range of
AyahPart -- Ayah: is part of
Ayah -- Riwayah